--- a/templates/index.html
+++ b/templates/index.html
@@ -149,6 +149,7 @@
 
     socket.on('message', function(message) {
         console.log('Received message: ', message)
+        displayMessage(message)
     })
 
     socket.on('disconnect', function() {
@@ -230,6 +231,42 @@
         })
     }
 
+    function pressed(e) {
+        // Has the enter key been pressed?
+        if ( (window.event ? event.keyCode : e.which) == 13) { 
+            // If it has been so, manually submit the <form>
+            e.preventDefault();
+            let msg = document.getElementById('text-area').value
+            document.getElementById('text-area').value = ''
+            socket.emit('message', msg)
+        }
+    }
+
+    function displayMessage(message) {
+        let msgHistDiv = document.getElementById('message-history-content')
+        let children = msgHistDiv.childElementCount;
+        if (children > 14) {
+            msgHistDiv.removeChild(msgHistDiv.firstChild)
+        }
+        let newDiv = document.createElement('div');
+        newDiv.innerHTML = textTruncate(message, 48, '...') + '<br />'
+        msgHistDiv.appendChild(newDiv)
+    }
+
+    function textTruncate(str, length, ending) {
+        if (length == null) {
+            length = 48;
+        }
+        if (ending == null) {
+            ending = '...';
+        }
+        if (str.length > length) {
+            return str.substring(0, length - ending.length) + ending;
+        } else {
+            return str;
+        }
+    };
+
 </script>
 
 <html lang="en">
@@ -245,144 +282,164 @@
             <p>Active Players: <span id="activePlayers"></span></p>
             <hr>
             <h2 id="wait-banner">Waiting for <span id="remaining-connections" class="red">3</span> more players.</h2>
-            <h4 id="wait-notif">Please wait until the current game ends.</h4>
             <h5 id="wait-time">New game in 3 seconds.</h5>
-            <h4 id="whos-turn-p">It's <span id='whos-turn' class="red"></span>'s turn.</h4>
-            <h2 id="winning-banner" style="display: none;"><span id="winner" class="red"></span> won the pot!</h2>
-            <h2 id="tie-winning-banner" style="display: none;">Tie! <span class="red" id="winner-1"></span> and <span class="red" id="winner-2"></span> will split the pot at <span id="half-pot"></span> chips each.</h2>
 
-            <div class="active-players"></div>
+            <div class="container">
 
+                <div class="row">
 
-            <div class="community-cards">
-                <div id="community-1" class="outline shadow rounded">
-                    <div class="top">
-                        <span id="community-1-rank-1">A</span>
-                        <span id="community-1-suit-1">&hearts;</span>
-                    </div>
-                
-                    <h1 id="community-1-suit-2">&hearts;</h1>
-                
-                    <div class="bottom">
-                        <span id="community-1-suit-3">&hearts;</span>
-                        <span id="community-1-rank-2">A</span>
-                    </div>
-                </div>
-                <div id="community-2" class="outline shadow rounded">
-                    <div class="top">
-                        <span id="community-2-rank-1">A</span>
-                        <span id="community-2-suit-1">&hearts;</span>
-                    </div>
-                
-                    <h1 id="community-2-suit-2">&hearts;</h1>
-                
-                    <div class="bottom">
-                        <span id="community-2-suit-3">&hearts;</span>
-                        <span id="community-2-rank-2">A</span>
-                    </div>
-                </div>
-                <div id="community-3" class="outline shadow rounded">
-                    <div class="top">
-                        <span id="community-3-rank-1">A</span>
-                        <span id="community-3-suit-1">&hearts;</span>
-                    </div>
-                
-                    <h1 id="community-3-suit-2">&hearts;</h1>
-                
-                    <div class="bottom">
-                        <span id="community-3-suit-3">&hearts;</span>
-                        <span id="community-3-rank-2">A</span>
-                    </div>
-                </div>
-                <div id="community-4" class="outline shadow rounded">
-                    <div class="top">
-                        <span id="community-4-rank-1">A</span>
-                        <span id="community-4-suit-1">&hearts;</span>
-                    </div>
-                
-                    <h1 id="community-4-suit-2">&hearts;</h1>
-                
-                    <div class="bottom">
-                        <span id="community-4-suit-3">&hearts;</span>
-                        <span id="community-4-rank-2">A</span>
-                    </div>
-                </div>
-                <div id="community-5" class="outline shadow rounded">
-                    <div class="top">
-                        <span id="community-5-rank-1">A</span>
-                        <span id="community-5-suit-1">&hearts;</span>
-                    </div>
-                
-                    <h1 id="community-5-suit-2">&hearts;</h1>
-                
-                    <div class="bottom">
-                        <span id="community-5-suit-3">&hearts;</span>
-                        <span id="community-5-rank-2">A</span>
-                    </div>
-                </div>
-                <br>
-                <div id="table-chips">
-                    <img height="20px" width="20px" src="../static/poker-token.png" alt=""> 
-                    <span id="pot">null</span> | 
-                    <img height="20px" width="20px" src="../static/poker-piece.png" alt=""> 
-                    <span id="table-stake">null</span></p>
-                </div>
-            </div>
+                    <div class="col-md-4">
+                        <div id="chat-room" class="shadow rounded">
+                            <div id="message-history">
+                                <div id="message-history-content">
 
-            <div class="pocket-cards">
-                <div id="pocket-1" class="outline shadow rounded">
-                    <div class="top">
-                        <span id="pocket-1-rank-1">A</span>
-                        <span id="pocket-1-suit-1">&hearts;</span>
-                    </div>
-                
-                    <h1 id="pocket-1-suit-2">&hearts;</h1>
-                
-                    <div class="bottom">
-                        <span id="pocket-1-suit-3">&hearts;</span>
-                        <span id="pocket-1-rank-2">A</span>
-                    </div>
-                </div>
-                <div id="pocket-2" class="outline shadow rounded">
-                    <div class="top">
-                        <span id="pocket-2-rank-1">A</span>
-                        <span id="pocket-2-suit-1">&hearts;</span>
-                    </div>
-                
-                    <h1 id="pocket-2-suit-2">&hearts;</h1>
-                
-                    <div class="bottom">
-                        <span id="pocket-2-suit-3">&hearts;</span>
-                        <span id="pocket-2-rank-2">A</span>
-                    </div>
-                </div>
-                <br>
-                <div id="user-chips">
-                    <img height="20px" width="20px" src="../static/poker-token.png" alt=""> 
-                        <span id="yourChips">null</span> | 
-                    <img height="20px" width="20px" src="../static/poker-piece.png" alt=""> 
-                        <span id="yourStake">null</span></p>
-                </div>
-            </div>
+                                </div>
+                            </div>
+                            <div class="text-area">
+                                <form id="form">
+                                    <textarea class="form-control" id="text-area" onkeydown="pressed(event)" rows="3"></textarea>
+                                </form>
+                            </div>
+
+                        </div>
+                        <div class="display">
+
+                            <div id="display-one" style="display: none;">
+                                <button type="button" class="btn btn-secondary btn-lg" onclick="check()">Check</button>
+                                <button type="button" class="btn btn-secondary btn-lg" onclick="raise()">Raise</button>
+                                <button type="button" class="btn btn-secondary btn-lg" onclick="fold()">Fold</button>
+                            </div>
+                    
+                            <div id="display-two" style="display: none;">
+                                <button type="button" class="btn btn-secondary btn-lg" onclick="call()">Call</button>
+                                <button type="button" class="btn btn-secondary btn-lg" onclick="raise()">Raise</button>
+                                <button type="button" class="btn btn-secondary btn-lg" onclick="fold()">Fold</button>
+                            </div>
             
+                        </div>
+
+                    </div>
+                    <div class="col-md-8">
+                        <h4 id="wait-notif">Please wait until the current game ends.</h4>
+                        <h4 id="whos-turn-p">It's <span id='whos-turn' class="red"></span>'s turn.</h4>
+                        <h2 id="winning-banner" style="display: none;"><span id="winner" class="red"></span> won the pot!</h2>
+                        <h2 id="tie-winning-banner" style="display: none;">Tie! <span class="red" id="winner-1"></span> and <span class="red" id="winner-2"></span> will split the pot at <span id="half-pot"></span> chips each.</h2>
+                        <div class="community-cards">
+                            <div id="community-1" class="outline shadow rounded">
+                                <div class="top">
+                                    <span id="community-1-rank-1">A</span>
+                                    <span id="community-1-suit-1">&hearts;</span>
+                                </div>
+                            
+                                <h1 id="community-1-suit-2">&hearts;</h1>
+                            
+                                <div class="bottom">
+                                    <span id="community-1-suit-3">&hearts;</span>
+                                    <span id="community-1-rank-2">A</span>
+                                </div>
+                            </div>
+                            <div id="community-2" class="outline shadow rounded">
+                                <div class="top">
+                                    <span id="community-2-rank-1">A</span>
+                                    <span id="community-2-suit-1">&hearts;</span>
+                                </div>
+                            
+                                <h1 id="community-2-suit-2">&hearts;</h1>
+                            
+                                <div class="bottom">
+                                    <span id="community-2-suit-3">&hearts;</span>
+                                    <span id="community-2-rank-2">A</span>
+                                </div>
+                            </div>
+                            <div id="community-3" class="outline shadow rounded">
+                                <div class="top">
+                                    <span id="community-3-rank-1">A</span>
+                                    <span id="community-3-suit-1">&hearts;</span>
+                                </div>
+                            
+                                <h1 id="community-3-suit-2">&hearts;</h1>
+                            
+                                <div class="bottom">
+                                    <span id="community-3-suit-3">&hearts;</span>
+                                    <span id="community-3-rank-2">A</span>
+                                </div>
+                            </div>
+                            <div id="community-4" class="outline shadow rounded">
+                                <div class="top">
+                                    <span id="community-4-rank-1">A</span>
+                                    <span id="community-4-suit-1">&hearts;</span>
+                                </div>
+                            
+                                <h1 id="community-4-suit-2">&hearts;</h1>
+                            
+                                <div class="bottom">
+                                    <span id="community-4-suit-3">&hearts;</span>
+                                    <span id="community-4-rank-2">A</span>
+                                </div>
+                            </div>
+                            <div id="community-5" class="outline shadow rounded">
+                                <div class="top">
+                                    <span id="community-5-rank-1">A</span>
+                                    <span id="community-5-suit-1">&hearts;</span>
+                                </div>
+                            
+                                <h1 id="community-5-suit-2">&hearts;</h1>
+                            
+                                <div class="bottom">
+                                    <span id="community-5-suit-3">&hearts;</span>
+                                    <span id="community-5-rank-2">A</span>
+                                </div>
+                            </div>
+                            <br>
+                            <div id="table-chips">
+                                <img height="20px" width="20px" src="../static/poker-token.png" alt=""> 
+                                <span id="pot">null</span> | 
+                                <img height="20px" width="20px" src="../static/poker-piece.png" alt=""> 
+                                <span id="table-stake">null</span></p>
+                            </div>
+                        </div>
             
+                        <div class="pocket-cards">
+                            <div id="pocket-1" class="outline shadow rounded">
+                                <div class="top">
+                                    <span id="pocket-1-rank-1">A</span>
+                                    <span id="pocket-1-suit-1">&hearts;</span>
+                                </div>
+                            
+                                <h1 id="pocket-1-suit-2">&hearts;</h1>
+                            
+                                <div class="bottom">
+                                    <span id="pocket-1-suit-3">&hearts;</span>
+                                    <span id="pocket-1-rank-2">A</span>
+                                </div>
+                            </div>
+                            <div id="pocket-2" class="outline shadow rounded">
+                                <div class="top">
+                                    <span id="pocket-2-rank-1">A</span>
+                                    <span id="pocket-2-suit-1">&hearts;</span>
+                                </div>
+                            
+                                <h1 id="pocket-2-suit-2">&hearts;</h1>
+                            
+                                <div class="bottom">
+                                    <span id="pocket-2-suit-3">&hearts;</span>
+                                    <span id="pocket-2-rank-2">A</span>
+                                </div>
+                            </div>
+                            <br>
+                            <div id="user-chips">
+                                <img height="20px" width="20px" src="../static/poker-token.png" alt=""> 
+                                    <span id="yourChips">null</span> | 
+                                <img height="20px" width="20px" src="../static/poker-piece.png" alt=""> 
+                                    <span id="yourStake">null</span></p>
+                            </div>
+                        </div>
+                        
+                    </div>
+                    
 
-
-
-
-            <div class="display">
-
-                <div id="display-one" style="display: none;">
-                    <button type="button" class="btn btn-secondary btn-lg" onclick="check()">Check</button>
-                    <button type="button" class="btn btn-secondary btn-lg" onclick="raise()">Raise</button>
-                    <button type="button" class="btn btn-secondary btn-lg" onclick="fold()">Fold</button>
                 </div>
-        
-                <div id="display-two" style="display: none;">
-                    <button type="button" class="btn btn-secondary btn-lg" onclick="call()">Call</button>
-                    <button type="button" class="btn btn-secondary btn-lg" onclick="raise()">Raise</button>
-                    <button type="button" class="btn btn-secondary btn-lg" onclick="fold()">Fold</button>
-                </div>
+                
 
             </div>
             
@@ -390,6 +447,48 @@
 </html>
 
 <style>
+
+    #text-area {
+        border-left: none;
+        border-right: none;
+        border-bottom: none;
+        font-size: 12px;
+        resize: none;
+    }
+
+    #message-history {
+        position: relative;
+        text-align: left;
+        font-size: 12px;
+        height: 80%
+    }
+
+
+    #message-history-content {
+        position: absolute;
+        bottom: 0.5em;
+        left: 0.5em;
+    }
+
+    .text-area {
+        height: 20%;
+        border-top: 0.5px solid rgb(204, 202, 202);
+    }
+
+    #chat-room {
+        height: 60vh;
+        width: 95%;
+        border: 0px solid black; 
+        text-align: center; 
+        padding: 10px; 
+        margin: 10px; 
+        background: #FFF ;
+        display: inline-block;
+    }
+
+    .chat-container {
+        border: 1px solid rgb(85, 83, 83);
+    }
 
     body {
         margin: 1rem;
@@ -419,7 +518,7 @@
     }
 
     .display {
-        margin-top: 5rem;
+        margin-top: 1.5rem;
         text-align: center;
     }
 
