cross browser + mobile

--- a/templates/index.html
+++ b/templates/index.html
@@ -632,4 +632,18 @@
         -webkit-border-radius:10px; 
     }
 
+    @media screen and (max-width: 600px) {
+
+        .row {
+            display: flex;
+            flex-direction: column-reverse;
+        }
+
+        #chat-container {
+            display: flex;
+            flex-direction: column-reverse;
+            margin-top: 0;
+        }
+    }
+
 </style>
